move sticky so it doesn't cause issue with overflow-x-auto

--- a/ui/user/src/app.css
+++ b/ui/user/src/app.css
@@ -515,6 +515,10 @@
 				transparent
 			);
 		}
+
+		@media (max-width: 768px) {
+			font-size: var(--text-xs);
+		}
 	}
 
 	.page-tab-active {
